--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,5 +1,6 @@
 @font-face {
-  src: url(/fonts/xkcd-script.woff2) format("woff2"),
+  src:
+    url(/fonts/xkcd-script.woff2) format("woff2"),
     url(/fonts/xkcd-script.woff) format("woff"),
     url(/fonts/xkcd-script.ttf) format("truetype");
   font-family: "xkcd Script";
