Apply `content-visibility: hidden` to articles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -46,7 +46,7 @@
       */}}
       <article
         id="{{ $id }}"
-        class="h-entry group relative mx-auto mb-12 max-w-7xl border border-transparent bg-uwu-base shadow-md shadow-uwu-shadow view-transition-class-[article] scripting:mx-0 scripting:mb-0 scripting:inline-flex scripting:h-[calc(100%_-_1rem)] scripting:w-[calc(100vw_-_3rem)] scripting:max-w-none scripting:whitespace-normal scripting:text-start scripting:sm:sticky scripting:sm:start-0 scripting:sm:w-article-narrow md:shadow-lg md:shadow-uwu-shadow lg:shadow-xl lg:shadow-uwu-shadow xl:shadow-uwu-shadow"
+        class="h-entry group relative mx-auto mb-12 max-w-7xl border border-transparent bg-uwu-base shadow-md shadow-uwu-shadow content-visibility-auto view-transition-class-[article] scripting:mx-0 scripting:mb-0 scripting:inline-flex scripting:h-[calc(100%_-_1rem)] scripting:w-[calc(100vw_-_3rem)] scripting:max-w-none scripting:whitespace-normal scripting:text-start scripting:sm:sticky scripting:sm:start-0 scripting:sm:w-article-narrow md:shadow-lg md:shadow-uwu-shadow lg:shadow-xl lg:shadow-uwu-shadow xl:shadow-uwu-shadow"
         {{ $dataAttributes | safeHTMLAttr }}
       >
         {{/* -
